# Calculator

./: CMakeLists.txt  README.md  build_release.ps1
assets/fonts/: README.md
src/: main.cpp
src/core/: HistoryManager.hpp  MathEngine.cpp  MathEngine.hpp
src/ui/: Application.cpp  Application.hpp  GuiRenderer.cpp  GuiRenderer.hpp  ImGuiWidgets.hpp
src/utils/: ThemeManager.cpp  ThemeManager.hpp
